tests/snapshots/run_wpt_conformance__coreml_reshape__unsqueeze__float16_2D_tensor_by_adding_two_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reshape.https.any.js reshape (unsqueeze) float16 2D tensor by adding two dimensions, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reshapeInput' must be of rank 1, instead got a multi-array value of rank 2.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reshapeInput: f16[4, 6];
  }

  nodes {
    [reshapeOutput] = reshape(reshapeInput, label="");
  }

  outputs { reshapeOutput; }
}
