tests/snapshots/run_wpt_conformance__coreml_reshape__unsqueeze__float16_3D_tensor_by_adding_2nd_and_3rd_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reshape.https.any.js reshape (unsqueeze) float16 3D tensor by adding 2nd and 3rd dimensions, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reshapeInput' must be of rank 2, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reshapeInput: f16[2, 12, 1];
  }

  nodes {
    [reshapeOutput] = reshape(reshapeInput, label="");
  }

  outputs { reshapeOutput; }
}
