tests/snapshots/run_wpt_conformance__coreml_reshape__unsqueeze__float32_5D_tensor_by_adding_4th_dimension.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reshape.https.any.js reshape (unsqueeze) float32 5D tensor by adding 4th dimension, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reshapeInput' must be of rank 4, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reshapeInput: f32[2, 1, 4, 3, 1];
  }

  nodes {
    [reshapeOutput] = reshape(reshapeInput, label="");
  }

  outputs { reshapeOutput; }
}
